[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "uc-intg-musiccast"
description = "Yamaha MusicCast Integration for Unfolded Circle Remote"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MPL-2.0"}
authors = [{name = "Meir Miyara", email = "meir.miyara@gmail.com"}]
keywords = ["unfoldedcircle", "integration", "yamaha", "musiccast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
]
dependencies = [
    "ucapi-framework>=1.9.1",
    "ucapi>=0.6.0",
    "aiohttp>=3.9.0",
    "certifi>=2024.0.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/mase1981/uc-intg-musiccast"

[tool.setuptools]
packages = ["uc_intg_musiccast"]

[tool.setuptools.dynamic]
version = {attr = "uc_intg_musiccast.__version__"}

[project.scripts]
uc-intg-musiccast = "uc_intg_musiccast:main"
